--- a/index.html
+++ b/index.html
@@ -149,6 +149,84 @@
     </div>
   </div>
 </section>
+<section class="main-flexbox">
+  <div class="test-flexbox-1">
+    <div class="test-head">
+      <h2 class="test-heading">
+        Real Stories from<br />
+        Real Customers
+      </h2>
+      <p class="test-p">Get inspired by the stories.</p>
+    </div>
+    <div class="background-image">
+      <img src="images/testimonial/quotemark.png" alt="bckgrund image"></div>
+    <div class="sub-test-1">
+      <img
+        class="logo-dimensions"
+        src="images/testimonial/hubspot .png"
+        alt="Hubsport logo"
+      />
+      <div class="quote">
+        <img src="images/testimonial/quote.png" alt="quote marks" />
+        <div class="feedback">
+          <p class="test-p">
+            To quickly start my startup landing page design, I was looking
+            for a landing page UI Kit. Landify is one of the best landing
+            page UI kit I have come across. It’s so flexible, well
+            organised and easily editable.
+          </p>
+          <footer>
+      <p class="author">Floyd Miles</p>
+      <p class="work-status">Vice President, GoPro</p>
+          </footer>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="test-flexbox-2">
+    <div class="sub-test-2">
+      <img
+        class="logo-dimensions"
+        src="images/testimonial/airbnb.png"
+        alt="Airbnb logo"
+      />
+      <div class="quote">
+        <img src="images/testimonial/quote.png" alt="quote marks" />
+        <div class="feedback">
+          <p class="test-p">
+            I used landify and created a landing page for my startup
+            within a week. The Landify UI Kit is simple and highly
+            intuitive, so anyone can use it.
+          </p>
+          <footer>
+            <p class="author">Jane Cooper</p>
+            <p class="work-status">CEO, Airbnb</p>
+          </footer>
+        </div>
+      </div>
+    </div>
+    <div class="sub-test-3">
+      <img
+        class="logo-dimensions"
+        src="images/testimonial/bookmyshow.png"
+        alt="BookMyShow logo"
+      />
+      <div class="quote">
+        <img src="images/testimonial/quote.png" alt="quote marks" />
+        <div class="feedback">
+          <p class="test-p">
+            Landify saved our time in designing my company page.
+          </p>
+          <footer>
+            <p class="author">Kristin Watson</p>
+            <p class="work-status">Co-Founder, BookMyShow</p>
+          </footer>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
  </div>
 </body>
 </html>
